# asrenterprisescashfree

./: .gitignore  .replit  CLOUDFLARE_SECURITY_GUIDE.md  design_guidelines.json  package.json  pyproject.toml  replit.md  sedoHEP6o
.emergent/: emergent.yml  summary.txt
backend/: REFACTORING_PLAN.md  cache.py  config.py  db_client.py  requirements.txt  security.py  server.py
backend/data/: mongo_snapshot.json
backend/routes/: __init__.py  cashfree_orders.py  crm.py  hr.py  payments.py  social_media.py  staff.py  whatsapp.py  whatsapp_ai.py  whatsapp_automation.py
backend/tests/: test_admin_2fa_iter56.py  test_admin_features.py  (+73 more)
backups/: asr_backup_20260227_204942.json  asr_backup_weekly_20260308_020000.json
frontend/: craco.config.js  package-lock.json  package.json
memory/: PRD.md  test_credentials.md
test_reports/: iteration_1.json  iteration_10.json  iteration_11.json  iteration_12.json  iteration_13.json  iteration_14.json  iteration_15.json  iteration_16.json  iteration_17.json  iteration_18.json  iteration_19.json  iteration_2.json  iteration_20.json  iteration_21.json  iteration_22.json  iteration_23.json  iteration_24.json  iteration_25.json  iteration_26.json  iteration_27.json  iteration_28.json  iteration_29.json  iteration_3.json  iteration_30.json  iteration_31.json  iteration_32.json  iteration_33.json  iteration_34.json  iteration_35.json  iteration_36.json  iteration_37.json  iteration_38.json  iteration_39.json  iteration_4.json  iteration_40.json  iteration_41.json  iteration_42.json  iteration_43.json  iteration_44.json  iteration_45.json  (+56 more)
(+142 files in other folders)
