[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.1.3",
    "boto3==1.42.29",
    "email-validator==2.3.0",
    "fastapi==0.110.1",
    "google-genai==1.59.0",
    "google-generativeai==0.8.6",
    "httpx==0.28.1",
    "limits==5.8.0",
    "mongomock-motor>=0.0.36",
    "motor==3.3.1",
    "openai==1.99.9",
    "openpyxl==3.1.5",
    "pandas==2.3.3",
    "passlib==1.7.4",
    "pillow==12.1.0",
    "pymongo==4.5.0",
    "pypdf2==3.0.1",
    "python-dotenv==1.2.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.21",
    "razorpay==2.0.0",
    "redis==7.2.0",
    "resend==2.21.0",
    "slowapi==0.1.9",
    "stripe==14.1.0",
    "uvicorn==0.25.0",
]
